# for display continuity sake please use 2 spaces instead of tabs

2012-11-17 mmichaud <michael.michaud@free.fr>
  * Add persistence of BeanshellAttributeOperation in a project

2012-11-10 mmichaud <michael.michaud@free.fr>
  * PostGIS driver : fix bug ID: 3519931 + split utils methods into two classes
  * ReferencedImage :: fix bug ID: 3077786 and make images resizable
  
2012-11-6 Giuseppe Aruta (giuseppe_aruta@yahoo.it)
  * Upgrade Italian and Spanish  language files

2012-11-01 sstein <sstein@geo.uzh.ch>
  * Upgrade from Sextante 0.6 to Sextante 1.0
    
2012-10-31 mmichaud <michael.michaud@free.fr>
  * Fix ValidatorTestCase broken by the recent change I made on the 
    ValidateSelectedLayersPlugIn (2012-10-28)

2012-10-28 Giuseppe Aruta (giuseppe_aruta@yahoo.it)
  * Upgrade Italian language file

2012-10-28 mmichaud <michael.michaud@free.fr>
  * Improve isSimple check in ValidateSelectedLayersPlugIn : it is now able to 
    check geometries of any dimension (jts 1.12) and even GeometryCollection 
    (jts 1.13)

2012-10-25 mmichaud <michael.michaud@free.fr>
  * ClipToFencePlugIn : centre dialog box and check visible layers only as the 
    default option (more safe)
  
2012-10-21 mmichaud <michael.michaud@free.fr>
  * Better separation of logic and UI in PlanarGraphPlugIn + some improvements 
  
2012-10-14 mmichaud <michael.michaud@free.fr>
  * Add the capability to have dynamic attributes in a feature.
    Main modification is in FeatureSchema, but small modifications have also 
    been made in AbstractBasicFeature, BasicFeature and ViewSchemaPlugIn
  * Add BeanshellAttributeCalculatorPlugIn to the core.
    This plugin uses the new dynamic attribute capability
  
2012-10-10 mmichaud <michael.michaud@free.fr>
  * Fix bug 3525977 : PNG rasters with void pixels not displayed

2012-10-08 mmichaud <michael.michaud@free.fr>
  * Fix bug id 3570707 : LayerNameRenderer and Windows 7 issue (continue)